--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Django==1.11.3
 psycopg2==2.7.1
 pytz==2017.2
 six==1.10.0
+dj-database-url==0.4.2
+Django==1.11.3
+psycopg2==2.7.1
+pytz==2017.2
+six==1.10.0
